--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="container">
                 <div class="navbar">
                     <div class="logo-container">
-                        <img src="https://github.com/CodeKaito/NextJS-Medium/blob/master/src/pages/assets/medium.png?raw=true" alt="medium-logo" class="logo">
+                        <img src="" alt="medium-logo" class="logo">
                     </div>
 
                     <div class="navbar-rightside">
