modified:   index.html

--- a/index.html
+++ b/index.html
@@ -321,6 +321,7 @@
                             <div class="recently-saved-title">
                                 <h4>Recently saved</h4>
                             </div>
+
                             <div class="recently-saved-card-top">
                                 <div class="card-image">
                                     <img src="https://miro.medium.com/v2/resize:fill:40:40/1*yUNfohs9jA6GCDmyCYJTvA@2x.png" alt="hero-img" class="card-image">
@@ -333,6 +334,20 @@
                                 </h3>
                                 <p>Jun 1 <span class="dot">.</span> 7 min read</p>
                             </div>
+
+                            <div class="recently-saved-card-top">
+                                <div class="card-image">
+                                    <img src="https://miro.medium.com/v2/resize:fill:40:40/1*yUNfohs9jA6GCDmyCYJTvA@2x.png" alt="hero-img" class="card-image">
+                                </div>
+                                <p><span class="bold">Hero</span> in <span class="bold">Javascript in Plain English</span></p>
+                            </div>
+                            <div class="recently-saved-card-bottom">
+                                <h3>Best VSCode Extensions That Every Developer Should Have (10x Productivity)
+                                    Jun 1
+                                </h3>
+                                <p>Jun 1 <span class="dot">.</span> 7 min read</p>
+                            </div>
+                            
                             <div class="see-more-container">
                                 <p>See all(2)</p>
                             </div>
