modified:   style.css

--- a/index.html
+++ b/index.html
@@ -302,10 +302,13 @@
                                 </div>
                                 <!-- Parte bassa del singolo post con la descrizione del post -->
                                 <div class="recently-saved-card-bottom">
-                                    <!-- Descrizione del post -->
-                                    <h3>Best VSCode Extensions That Every Developer Should Have (10x Productivity)
-                                        Jun 1
-                                    </h3>
+                                    <!-- Container della descrizione del post -->
+                                    <div class="recently-saved-card-bottom-description">
+                                        <!-- Descrizione del post -->
+                                        <h3>Best VSCode Extensions That Every Developer Should Have (10x Productivity)
+                                            Jun 1
+                                        </h3>
+                                    </div>
                                     <!-- Data del post -->
                                     <p>Jun 1 <span class="dot">.</span> 7 min read</p>
                                 </div>
