modified:   index.html

--- a/index.html
+++ b/index.html
@@ -536,10 +536,10 @@
                                                 </p>
                                                 <!-- Il tag del feed -->
                                                 <div class="tag">
-                                                    <p>Business</p>
+                                                    <p>Games</p>
                                                 </div>
                                                 <span class="dot">.</span>
-                                                <p>Selected for you</p>
+                                                <p>Following</p>
                                                 <span class="dot">.</span>
                                                 <svg width="16" height="16" viewBox="0 0 64 64" fill="none" class="qz afj"><path d="M39.64 40.83L33.87 56.7a1.99 1.99 0 0 1-3.74 0l-5.77-15.87a2.02 2.02 0 0 0-1.2-1.2L7.3 33.88a1.99 1.99 0 0 1 0-3.74l15.87-5.77a2.02 2.02 0 0 0 1.2-1.2L30.12 7.3a1.99 1.99 0 0 1 3.74 0l5.77 15.87a2.02 2.02 0 0 0 1.2 1.2l15.86 5.76a1.99 1.99 0 0 1 0 3.74l-15.87 5.77a2.02 2.02 0 0 0-1.2 1.2z" fill="#FFC017"></path></svg>
                                                 <p class="member">Member-only</p>
@@ -565,6 +565,86 @@
                                 <div class="image-feed-container">
                                     <!-- L'immagine del post -->
                                     <img src="https://miro.medium.com/v2/resize:fill:224:224/0*GWdeVc-ilazb5pMG" alt="image-feed" class="image-feed" loading="lazy">
+                                </div>
+                            </div>
+                            <!-- Chiusura div del corpus del feed e l'immagine dell'articolo -->
+                        </div>
+                        <!-- Chiusura div che contiene tutto l'articolo e le spaziature dagli altri articoli -->
+    <!-- FINE DEL SINGOLO ARTICOLO DEL FEED -->
+    <!-- INIZIO DEL SINGOLO ARTICOLO DEL FEED -->
+                        <!-- Div che contiene tutto l'articolo e le spaziature dagli altri articoli -->
+                        <div class="article-container">
+                            <!-- Author container contiene l'immagine dell'autore del feed, il suo nome e il suo titolo -->
+                            <div class="author-container">
+                                <!-- Container dell'immagine dell'autore dell'articolo -->
+                                <div class="author-image-container">
+                                    <!-- Immagine autore dell'articolo -->
+                                    <img src="https://miro.medium.com/v2/resize:fill:48:48/1*6yURMFxX0qmzjRvfZpR3aQ.jpeg" alt="author-image" class="author-image">
+                                </div>
+                                <!-- Nome dell'autore e il suo titolo -->
+                                <p class="author-name"><span class="bold">Natalia Demianenko</span></p>
+                            </div>
+                            <!-- Div che contiene il corpus del feed e l'immagine dell'articolo -->
+                            <div class="article">
+                                <!-- Il corpus del feed -->
+                                <div class="feed">
+                                    <!-- Il corpus del feed (solo titolo e descrizione) -->
+                                    <div class="feed-topside">
+                                        <!-- Container del titolo del feed -->
+                                        <div class="feed-title-container">
+                                            <!-- Titolo del feed -->
+                                            <h3 class="feed-title">10 Github Repositories for Software Testers</h3>
+                                        </div>
+                                        <!-- Container della descrizione del feed -->
+                                        <!-- Descrizione del feed -->
+                                        <div class="feed-description-container">
+                                            <p class="feed-description">Software testing is an integral part of the software development process, ensuring that the final product is reliable, bug-free, and meets user expectations. Manual testers play a crucial role in this journey, meticulously evaluating software to identify issues, report defects, and provide valuable feedback. To excel in their roles, testers…</p>
+                                        </div>
+                                    </div>
+                                    <!-- Corpus del feed (tag in basso al feed) -->
+                                    <div class="feed-bottomside">
+                                        <!-- Container dei tag -->
+                                        <div class="tag-container">
+                                            <!-- Ho suddiviso i tag in 2 parti di modo da dare il justify content -->
+                                            <div class="left-side">
+                                                <!-- La data del feed -->
+                                                <p class="author-date">
+                                                    <span>Oct 21</span>
+                                                    <span class="dot">.</span>
+                                                    <span>4 min read</span>
+                                                    <span class="dot">.</span>
+                                                </p>
+                                                <!-- Il tag del feed -->
+                                                <div class="tag">
+                                                    <p>QA</p>
+                                                </div>
+                                                <span class="dot">.</span>
+                                                <p>Following</p>
+                                                <span class="dot">.</span>
+                                                <svg width="16" height="16" viewBox="0 0 64 64" fill="none" class="qz afj"><path d="M39.64 40.83L33.87 56.7a1.99 1.99 0 0 1-3.74 0l-5.77-15.87a2.02 2.02 0 0 0-1.2-1.2L7.3 33.88a1.99 1.99 0 0 1 0-3.74l15.87-5.77a2.02 2.02 0 0 0 1.2-1.2L30.12 7.3a1.99 1.99 0 0 1 3.74 0l5.77 15.87a2.02 2.02 0 0 0 1.2 1.2l15.86 5.76a1.99 1.99 0 0 1 0 3.74l-15.87 5.77a2.02 2.02 0 0 0-1.2 1.2z" fill="#FFC017"></path></svg>
+                                                <p class="member">Member-only</p>
+                                            </div>
+                                            <!-- Container delle icone del bookmark e i 3 puntini -->
+                                            <div class="right-side">
+                                                <!-- Container del bookmark -->
+                                                <div class="bookmark-container">
+                                                    <!-- Fontawesome del bookmark -->
+                                                    <i class="fa-regular fa-bookmark fa-bookmark-tag"></i>
+                                                </div>
+                                                <!-- Container dei 3 puntini -->
+                                                <div class="ellipsis-container">
+                                                    <!-- Fontawesome dei 3 puntini -->
+                                                    <i class="fa-solid fa-ellipsis"></i>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- Chiusura div del corpus del feed -->
+                                <!-- Container dell'immagine del post -->
+                                <div class="image-feed-container">
+                                    <!-- L'immagine del post -->
+                                    <img src="https://miro.medium.com/v2/resize:fill:224:224/1*r11Qw7auwEZb2e_-ctsxvg.png" alt="image-feed" class="image-feed" loading="lazy">
                                 </div>
                             </div>
                             <!-- Chiusura div del corpus del feed e l'immagine dell'articolo -->
