--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
                                         <!-- Container del titolo del feed -->
                                         <div class="feed-title-container">
                                             <!-- Titolo del feed -->
-                                            <h3 class="feed-title">The Nintendo Ads You’ve Never Seen</h3>
+                                            <h3 class="feed-title">The Nintendo Ads You’ve Never Seen In Your Entire Life</h3>
                                         </div>
                                         <!-- Container della descrizione del feed -->
                                         <!-- Descrizione del feed -->
@@ -529,7 +529,7 @@
                                             <div class="left-side">
                                                 <!-- La data del feed -->
                                                 <p class="author-date">
-                                                    <span>6 days ago</span>
+                                                    <span>Jun 21</span>
                                                     <span class="dot">.</span>
                                                     <span>7 min read</span>
                                                     <span class="dot">.</span>
@@ -540,6 +540,9 @@
                                                 </div>
                                                 <span class="dot">.</span>
                                                 <p>Following</p>
+                                                <span class="dot">.</span>
+                                                <svg width="16" height="16" viewBox="0 0 64 64" fill="none" class="qz afj"><path d="M39.64 40.83L33.87 56.7a1.99 1.99 0 0 1-3.74 0l-5.77-15.87a2.02 2.02 0 0 0-1.2-1.2L7.3 33.88a1.99 1.99 0 0 1 0-3.74l15.87-5.77a2.02 2.02 0 0 0 1.2-1.2L30.12 7.3a1.99 1.99 0 0 1 3.74 0l5.77 15.87a2.02 2.02 0 0 0 1.2 1.2l15.86 5.76a1.99 1.99 0 0 1 0 3.74l-15.87 5.77a2.02 2.02 0 0 0-1.2 1.2z" fill="#FFC017"></path></svg>
+                                                <p class="member">Member-only</p>
                                             </div>
                                             <!-- Container delle icone del bookmark e i 3 puntini -->
                                             <div class="right-side">
@@ -590,7 +593,7 @@
                                         <!-- Container del titolo del feed -->
                                         <div class="feed-title-container">
                                             <!-- Titolo del feed -->
-                                            <h3 class="feed-title">10 Github Repositories for Software Testers</h3>
+                                            <h3 class="feed-title">10 Github Repositories for Software Testers and some important suggestions</h3>
                                         </div>
                                         <!-- Container della descrizione del feed -->
                                         <!-- Descrizione del feed -->
@@ -617,6 +620,9 @@
                                                 </div>
                                                 <span class="dot">.</span>
                                                 <p>Following</p>
+                                                <span class="dot">.</span>
+                                                <svg width="16" height="16" viewBox="0 0 64 64" fill="none" class="qz afj"><path d="M39.64 40.83L33.87 56.7a1.99 1.99 0 0 1-3.74 0l-5.77-15.87a2.02 2.02 0 0 0-1.2-1.2L7.3 33.88a1.99 1.99 0 0 1 0-3.74l15.87-5.77a2.02 2.02 0 0 0 1.2-1.2L30.12 7.3a1.99 1.99 0 0 1 3.74 0l5.77 15.87a2.02 2.02 0 0 0 1.2 1.2l15.86 5.76a1.99 1.99 0 0 1 0 3.74l-15.87 5.77a2.02 2.02 0 0 0-1.2 1.2z" fill="#FFC017"></path></svg>
+                                                <p class="member">Member-only</p>
                                             </div>
                                             <!-- Container delle icone del bookmark e i 3 puntini -->
                                             <div class="right-side">
