modified:   index.html

--- a/index.html
+++ b/index.html
@@ -748,7 +748,7 @@
                                     <!-- Nome e Cognome dell'utente da followare -->
                                     <h4 class="user-information-name">Elon Musk</h4>
                                     <!-- Descrizione dell'utente da followare -->
-                                    <p class="user-information-description">CEO @Tesla&Space-X</p>
+                                    <p class="user-information-description">CEO @Tesla&Space-X and Ex-CEO of Paypal</p>
                                 </div>
                                 <!-- Pulsante follow -->
                                 <button class="follow-button">Follow</button>    
