--- a/index.html
+++ b/index.html
@@ -651,6 +651,86 @@
                         </div>
                         <!-- Chiusura div che contiene tutto l'articolo e le spaziature dagli altri articoli -->
     <!-- FINE DEL SINGOLO ARTICOLO DEL FEED -->
+    <!-- INIZIO DEL SINGOLO ARTICOLO DEL FEED -->
+                        <!-- Div che contiene tutto l'articolo e le spaziature dagli altri articoli -->
+                        <div class="article-container">
+                            <!-- Author container contiene l'immagine dell'autore del feed, il suo nome e il suo titolo -->
+                            <div class="author-container">
+                                <!-- Container dell'immagine dell'autore dell'articolo -->
+                                <div class="author-image-container">
+                                    <!-- Immagine autore dell'articolo -->
+                                    <img src="https://miro.medium.com/v2/resize:fill:24:24/1*qAiJOnPDlGIOQOSHj0J53Q.jpeg" alt="author-image" class="author-image">
+                                </div>
+                                <!-- Nome dell'autore e il suo titolo -->
+                                <p class="author-name"><span class="bold">Zach Quinn</span> in <span class="bold">Pipeline: Your Data Engineering Resource</span> </p>
+                            </div>
+                            <!-- Div che contiene il corpus del feed e l'immagine dell'articolo -->
+                            <div class="article">
+                                <!-- Il corpus del feed -->
+                                <div class="feed">
+                                    <!-- Il corpus del feed (solo titolo e descrizione) -->
+                                    <div class="feed-topside">
+                                        <!-- Container del titolo del feed -->
+                                        <div class="feed-title-container">
+                                            <!-- Titolo del feed -->
+                                            <h3 class="feed-title">Am I Doing A Data Science Certificate For The Wrong Reason?</h3>
+                                        </div>
+                                        <!-- Container della descrizione del feed -->
+                                        <!-- Descrizione del feed -->
+                                        <div class="feed-description-container">
+                                            <p class="feed-description">Your LinkedIn might show a lot of data science certificates, but are you actually learning? And will those skills get you a job? —  ZachOverflow is a recurring column in which I attempt to answer one frequently asked data science question thoroughly and honestly. No oversaturated topics. No listicles. No clickbait. Just my (mostly) unfiltered responses based on professional experience, technical exposure and, yes, the occasional unsubstantiated opinion.</p>
+                                        </div>
+                                    </div>
+                                    <!-- Corpus del feed (tag in basso al feed) -->
+                                    <div class="feed-bottomside">
+                                        <!-- Container dei tag -->
+                                        <div class="tag-container">
+                                            <!-- Ho suddiviso i tag in 2 parti di modo da dare il justify content -->
+                                            <div class="left-side">
+                                                <!-- La data del feed -->
+                                                <p class="author-date">
+                                                    <span>Nov 1</span>
+                                                    <span class="dot">.</span>
+                                                    <span>6 min read</span>
+                                                    <span class="dot">.</span>
+                                                </p>
+                                                <!-- Il tag del feed -->
+                                                <div class="tag">
+                                                    <p>Data Science</p>
+                                                </div>
+                                                <span class="dot">.</span>
+                                                <p>Selected for you</p>
+                                                <span class="dot">.</span>
+                                                <svg width="16" height="16" viewBox="0 0 64 64" fill="none" class="qz afj"><path d="M39.64 40.83L33.87 56.7a1.99 1.99 0 0 1-3.74 0l-5.77-15.87a2.02 2.02 0 0 0-1.2-1.2L7.3 33.88a1.99 1.99 0 0 1 0-3.74l15.87-5.77a2.02 2.02 0 0 0 1.2-1.2L30.12 7.3a1.99 1.99 0 0 1 3.74 0l5.77 15.87a2.02 2.02 0 0 0 1.2 1.2l15.86 5.76a1.99 1.99 0 0 1 0 3.74l-15.87 5.77a2.02 2.02 0 0 0-1.2 1.2z" fill="#FFC017"></path></svg>
+                                                <p class="member">Member-only</p>
+                                            </div>
+                                            <!-- Container delle icone del bookmark e i 3 puntini -->
+                                            <div class="right-side">
+                                                <!-- Container del bookmark -->
+                                                <div class="bookmark-container">
+                                                    <!-- Fontawesome del bookmark -->
+                                                    <i class="fa-regular fa-bookmark fa-bookmark-tag"></i>
+                                                </div>
+                                                <!-- Container dei 3 puntini -->
+                                                <div class="ellipsis-container">
+                                                    <!-- Fontawesome dei 3 puntini -->
+                                                    <i class="fa-solid fa-ellipsis"></i>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- Chiusura div del corpus del feed -->
+                                <!-- Container dell'immagine del post -->
+                                <div class="image-feed-container">
+                                    <!-- L'immagine del post -->
+                                    <img src="https://miro.medium.com/v2/resize:fill:224:224/0*owHlk3foZZ7ebyn3" alt="image-feed" class="image-feed" loading="lazy">
+                                </div>
+                            </div>
+                            <!-- Chiusura div del corpus del feed e l'immagine dell'articolo -->
+                        </div>
+                        <!-- Chiusura div che contiene tutto l'articolo e le spaziature dagli altri articoli -->
+    <!-- FINE DEL SINGOLO ARTICOLO DEL FEED -->
                     </div>
     <!-- FINE DEL FEED -->
                 </main>
